--- a/marble/marbleCube/index.html
+++ b/marble/marbleCube/index.html
@@ -5,7 +5,7 @@
 </style>
 </head>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r71/three.min.js"></script>
-<script src="../lib/Trackball.js"></script>
+<script src="../../lib/Trackball.js"></script>
 <script id="noise" type="x-shader/x-fragment">
   //
   // Description : Array and textureless GLSL 2D/3D/4D simplex 
